pushing changes you don't get sucks

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <!-- <link rel="stylesheet" href="../public/css/about.css"> -->
+    <link rel="stylesheet" href="../public/css/about.css">
     <link rel="stylesheet" href="../public/css/bios.css">
     <link rel="stylesheet" href="../public/css/output-styles.css">
     <link rel="stylesheet" href="../public/css/mobile.css">
@@ -21,7 +21,7 @@
 
     <section id = "container" class="overflow-x-hidden">
       <div class="main-wrapper">
-        <section id="cover" class="bg-no-repeat bg-center bg-cover text-primary panel background cover overflow-hidden w-full h-screen hero-section" style="background-image: url('../public/img/about-cover.png')">
+        <section id="cover" class="bg-no-repeat bg-center bg-cover text-primary    background cover overflow-hidden w-full h-screen hero-section" style="background-image: url('../public/img/about-cover.png')">
              <header class="text-gray-700 body-font ">
                  <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                    <a href="/" class="flex items-center mb-4 md:mb-0  xl:-mb-8">
@@ -45,8 +45,10 @@
                <p>mission, origin and teams</p>
              </div>
           </section>
-          <section class="panel bg-secondary">
-              <section class="lg:flex mb-4 xl:mt-24">
+
+          <!-- ==========Note from Vinci========= -->
+          <section class="border-b border-gray-300 border-opacity-25 bg-secondary">
+              <section class="lg:flex mb-4 lg:mt-24 lg:mb-20 xl:mt-24">
                  <div class="w-3/5 ml-20 m-2 mt-6 p-6 pt-14">
                      <h2 class ="text-primary font-semibold text-3xl xl:text-4xl text-left tracking-wider font-sans">
                          A Note From VINCI
@@ -71,8 +73,10 @@
                </section>
          </section>
 
-         <section class="panel bg-secondary">
-           <section class="lg:flex pb-6 mb-4 text-primary xl:mt-24">
+
+      <!--========= Origins ==========-->
+         <section class="border-b border-gray-300 border-opacity-25 bg-secondary">
+           <section class="lg:flex pb-6 mb-4 text-primary lg:mt-16 xl:mt-24">
              <div class="w-3/5 ml-20 m-2 mt-6 p-6 pt-14">
                <h2 class="text-primary font-semibold text-3xl xl:text-4xl text-left tracking-wider font-sans"> Origins </h2>
                <hr class="mt-4">
@@ -93,7 +97,9 @@
               </section>
          </section>
 
-         <section class=" mb-4 text-primary panel bg-secondary">
+         <!-- ============TEAM ==========-->
+
+         <section class=" mb-4 text-primary border-b border-gray-300 border-opacity-25 bg-secondary">
            <section class="text-gray-700 body-font">
                  <div class="container pr-8 pl-4 py-24 mx-auto">
                    <div class="flex flex-col text-center w-full mb-20">
@@ -450,8 +456,8 @@
              </section>
            </section>
 
-           <section class="panel">
-             <section class="bg-secondary panel">
+           <section class="  ">
+             <section class="bg-secondary   ">
                 <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
                   <h1 class ="text-primary text-center text-4xl font-sans xl:mt-12">Want to Learn More About VR Training?</h1>
                   <div class="flex flex-col justify-center mt-32 xl:mt-40">
@@ -607,7 +613,7 @@
             </style>
         </section>
 
-        <section id="cover" class="bg-no-repeat bg-center bg-cover text-primary panel background cover overflow-hidden w-full h-screen hero-section" style="background-image: url('../public/img/about-cover.png')">
+        <section id="cover" class="bg-no-repeat bg-center bg-cover text-primary    background cover overflow-hidden w-full h-screen hero-section" style="background-image: url('../public/img/about-cover.png')">
              <header class="text-gray-700 body-font ">
 
              </header>
@@ -619,7 +625,7 @@
                <p>mission, origin and teams</p>
              </div>
           </section>
-          <section class="panel bg-secondary">
+          <section class="   bg-secondary">
               <section class="overflow-x-auto lg:flex mb-4 ">
                  <div class="lg:w-3/5 lg:ml-20 lg:m-2 mt-6 p-6 lg:pt-14">
                      <h2 class ="text-primary font-semibold text-3xl text-left tracking-wider font-sans">
@@ -645,7 +651,7 @@
                </section>
          </section>
 
-         <section class="lg:flex pb-6 mb-4 text-primary panel bg-secondary">
+         <section class="lg:flex pb-6 mb-4 text-primary    bg-secondary">
            <div class="lg:w-3/5 lg:ml-20 m-2 mt-6 p-6 pt-14 bg-secondary">
              <h2 class="text-primary font-semibold text-3xl text-left tracking-wider font-sans"> Origins </h2>
              <hr class="mt-4">
@@ -665,7 +671,7 @@
            </div>
          </section>
 
-         <section class="lg:mb-4 text-primary panel bg-secondary">
+         <section class="lg:mb-4 text-primary    bg-secondary">
            <section class="text-gray-700 body-font">
                  <div class="container py-20 mx-auto">
                    <div class="lg:flex lg:flex-col sm:block text-center w-full mb-20  pr-8 pl-4 ">
@@ -1026,9 +1032,9 @@
                  <!--==================
                   FOOTER/CONTACT SECTION
                  ==================-->
-                 <section class="panel">
+                 <section class="  ">
 
-                   <section class="bg-secondary panel">
+                   <section class="bg-secondary   ">
                       <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
                         <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
                         <div class="flex flex-col justify-center mt-24">
@@ -1100,7 +1106,7 @@
                  </section>
       </section>   <!-- end of mobile container -->
 
-     </section> <!-- end of panel container -->
+     </section> <!-- end of    container -->
 
  <!-- ===============
      SCRIPTS
