--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,23 +1,23 @@
 body{
-
+  background-color: #191919;
 }
 
-#container {
+/* #container {
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-}
+} */
 
-.panel{
+/* .panel{
   border: 1px solid #191919;
   text-align: center;
   position: absolute;
   height: 100vh;
   width: 100%;
   will-change: transform;
-}
+} */
 
 .coverHr{
   height: 12px;
