--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -20,7 +20,7 @@
     </style>
     <section id = "container">
       <div class="main-wrapper">
-        <section id="cover" class="bg-center bg-cover text-primary panel background cover overflow-hidden" style="background-image: url('../public/img/contact-hero-img.png')">
+        <section id="cover" class="bg-center bg-cover text-primary lg:h-screen background cover overflow-hidden" style="background-image: url('../public/img/contact-hero-img.png')">
           <header class="text-gray-700 body-font ">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                 <a href="/" class="flex items-center mb-4 md:mb-0 xl:-mb-8">
@@ -37,14 +37,16 @@
               </div>
           </header>
           <hr class="-mt-4">
-          <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl xl:text-5xl uppercase font-sans font-semibold xl:mt-72">CONTACT</h1>
+          <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl xl:text-5xl uppercase font-sans font-semibold lg:mt-48 xl:mt-72">CONTACT</h1>
           <div class="tracking-widest text-left xl:text-3xl p-4 ml-50 xl:mt-12">
             <p>Have any questions?</p>
             <p>Drop us a message.</p>
             <p>Book a demo.</p>
           </div>
          </section>
-         <section class="px-16 bg-center bg-covermb-4 panel background first" style="background-image: url('../public/img/contact-bg.png')">
+
+
+         <section class="px-16 bg-center bg-cover lg:mb-0 mb-4 lg:h-screen background first" style="background-image: url('../public/img/contact-bg.png')">
            <section class="text-gray-700 body-font relative">
              <div class=" container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
              <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
@@ -68,10 +70,10 @@
            </section>
        </section>
 
-       <section class="panel">
-         <section class="bg-secondary panel">
-            <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
-              <h1 class ="text-primary text-center text-4xl font-sans xl:mt-12">Want to Learn More About VR Training?</h1>
+       <section class=" ">
+         <section class="bg-secondary  ">
+            <footer class="bg-secondary bg-bottom bg-cover text-primary body-font lg:mt-0 mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
+              <h1 class ="text-primary text-center text-4xl font-sans lg:mt-12 xl:mt-12">Want to Learn More About VR Training?</h1>
               <div class="flex flex-col justify-center mt-32 xl:mt-40">
                  <a class="flex flex-col justify-center" href="/blogs">
                    <button class="w-1/4 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg xl:text-3xl">Check Out Our Blogs</button>
@@ -251,7 +253,7 @@
            </style>
        </section>
 
-       <section id="cover" class="bg-center bg-cover text-primary panel background cover overflow-hidden" style="background-image: url('../public/img/contact-hero-img.png')">
+       <section id="cover" class="bg-center bg-cover text-primary   background cover overflow-hidden" style="background-image: url('../public/img/contact-hero-img.png')">
          <header class="text-gray-700 body-font ">
 
              <!-- <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center"> -->
@@ -277,7 +279,7 @@
          </div>
         </section>
 
-        <section class=" bg-center bg-covermb-4 panel background first" style="background-image: url('../public/img/contact-bg.png')">
+        <section class=" bg-center bg-covermb-4   background first" style="background-image: url('../public/img/contact-bg.png')">
           <section class="text-gray-700 body-font relative">
             <div class="container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
             <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
@@ -303,7 +305,7 @@
       </section>
 
       <!-- - - - - - - - - Footer ---------------->
-      <section class="bg-secondary panel">
+      <section class="bg-secondary  ">
          <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
            <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
            <div class="flex flex-col justify-center mt-24">
@@ -375,7 +377,7 @@
 
      </section>   <!-- end of mobile container -->
 
-    </section> <!-- end of panel container -->
+    </section> <!-- end of   container -->
 
 <!-- ===============
     SCRIPTS
