--- a/views/services.hbs
+++ b/views/services.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css link -->
     <link rel="stylesheet" href="../public/css/output-styles.css">
-    <!-- <link rel="stylesheet" href="../public/css/panels.css"> -->
+    <!-- <link rel="stylesheet" href="../public/css/ s.css"> -->
     <link rel="stylesheet" href="../public/css/services.css">
     <link rel="stylesheet" href="../public/css/mobile.css">
     <title>Vinci VR</title>
@@ -13,7 +13,7 @@
   <body class="bg-secondary text-primary font-serif">
     <section id="container" class="overflow-x-hidden">
       <div class="main-wrapper">
-        <section class="panel">
+        <section class=" ">
           <section class="hero-section h-screen w-full overflow-x-auto">
             <style media="screen">
               body {
@@ -47,7 +47,7 @@
             <hr class="-mt-4">
 
 
-              <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl xl:text-5xl uppercase font-sans font-semibold xl:mt-72">Codex</h1>
+              <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl lg:text-4xl xl:text-4xl uppercase font-sans font-semibold lg:mt-48 xl:mt-72">Codex</h1>
               <div class="tracking-widest text-left xl:text-3xl p-4 ml-50 xl:mt-12">
                 <p>Access the entire codex suite or</p>
                 <p>pick and choose which toolkits to use.</p>
@@ -55,7 +55,7 @@
               </section>
         </section>
 
-        <section class="panel bg-secondary">
+        <section class="border-b border-gray-300 border-opacity-25  bg-secondary">
           <section class="  text-lg p-12 bg-secondary md:p-20 lg:p-20">
             <h2 class="text-4xl text-left py-4 mx-4 font-medium font-sans xl:text-4xl xl:mt-32">Educate Your Workforce Like Never Before</h2>
             <hr class=" w-3/4 py-4 font-thin mx-4">
@@ -75,7 +75,9 @@
           </section>
         </section>
 
-        <section class="panel bg-secondary">
+
+<!---->
+        <section class="border-b border-gray-300 border-opacity-25  bg-secondary">
           <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
             <section class="-ml-2 w-2/3">
               <h2 class="text-3xl font-medium uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Codex Authoring</h2>
@@ -100,7 +102,7 @@
         </section>
 
 
-        <section class="panel bg-secondary">
+        <section class="border-b border-gray-300 border-opacity-25  bg-secondary">
           <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
             <section class="-ml-2 w-2/3">
               <h1 class="text-3xl font-medium uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Codex Simulator</h1>
@@ -126,7 +128,7 @@
 
 
 
-          <section class="panel bg-secondary">
+          <section class="border-b border-gray-300 border-opacity-25  bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="-ml-2 w-2/3 ">
                 <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Codex Analytics</h1>
@@ -150,7 +152,7 @@
             </section>
           </section>
 
-          <section class="panel bg-secondary">
+          <section class="border-b border-gray-300 border-opacity-25  bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="-ml-2 w-2/3 ">
                 <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Leverage low-cost VR</h1>
@@ -174,7 +176,7 @@
             </section>
           </section>
 
-          <section class="panel bg-secondary">
+          <section class="border-b border-gray-300 border-opacity-25  bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="-ml-2 w-2/3 ">
                 <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Leverage low-cost VR</h1>
@@ -195,7 +197,7 @@
             </section>
           </section>
 
-          <section class="panel bg-secondary">
+          <section class="border-b border-gray-300 border-opacity-25  bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="-ml-2 w-2/3 ">
                 <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Scalable Collaboration</h1>
@@ -217,9 +219,9 @@
           </section>
 
 
-        <!-- <section class="panel bg-secondary">
+        <!-- <section class="  bg-secondary">
           <section class="contact">
-          <section class=" bg-center bg-covermb-4 panel background first" style="background-image: url('../public/img/contact-bg.png')">
+          <section class=" bg-center bg-covermb-4   background first" style="background-image: url('../public/img/contact-bg.png')">
            <section class="text-gray-700 body-font relative">
              <div class="container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
                  <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
@@ -244,8 +246,8 @@
           </section>
         </section> -->
 
-        <section class="panel">
-          <section class="bg-secondary panel">
+        <section class=" ">
+          <section class="bg-secondary  ">
              <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
                <h1 class ="text-primary text-center text-4xl font-sans xl:mt-12">Want to Learn More About VR Training?</h1>
                <div class="flex flex-col justify-center mt-32 xl:mt-40">
@@ -405,7 +407,7 @@
             </style>
         </section>
 
-        <section class="panel">
+        <section class=" ">
           <section class="hero-section h-screen w-full">
             <style media="screen">
               h1, h2, h3, h4, h5, h6 {
@@ -430,7 +432,7 @@
               </section>
         </section>
 
-        <section class="panel bg-secondary">
+        <section class="  bg-secondary">
           <section class="  text-lg p-12 bg-secondary md:p-20 lg:p-20">
             <h2 class="text-3xl text-center py-4 mx-4 font-medium font-sans">Educate Your Workforce Like Never Before</h2>
             <hr class=" w-3/4 py-4 font-thin mx-auto">
@@ -450,7 +452,7 @@
           </section>
         </section>
 
-        <section class="panel bg-secondary">
+        <section class="  bg-secondary">
           <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
             <section class="mx-auto mt-10 w-2/3">
               <h2 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Codex Authoring</h2>
@@ -475,7 +477,7 @@
         </section>
 
 
-        <section class="panel bg-secondary">
+        <section class="  bg-secondary">
           <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
             <section class="mx-auto w-2/3">
               <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Codex Simulator</h1>
@@ -501,7 +503,7 @@
 
 
 
-          <section class="panel bg-secondary">
+          <section class="  bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="mx-auto w-2/3 ">
                 <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Codex Analytics</h1>
@@ -525,7 +527,7 @@
             </section>
           </section>
 
-          <section class="panel bg-secondary">
+          <section class="  bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="mx-auto w-2/3 ">
                 <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Leverage low-cost VR</h1>
@@ -549,7 +551,7 @@
             </section>
           </section>
 
-          <section class="panel bg-secondary">
+          <section class="  bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="mx-auto w-2/3 ">
                 <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Leverage low-cost VR</h1>
@@ -570,7 +572,7 @@
             </section>
           </section>
 
-          <section class="panel bg-secondary">
+          <section class="  bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="mx-auto w-2/3 ">
                 <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Scalable Collaboration</h1>
@@ -592,9 +594,9 @@
           </section>
 
 
-        <!-- <section class="panel bg-secondary">
+        <!-- <section class="  bg-secondary">
           <section class="contact">
-          <section class=" bg-center bg-covermb-4 panel background first" style="background-image: url('../public/img/contact-bg.png')">
+          <section class=" bg-center bg-covermb-4   background first" style="background-image: url('../public/img/contact-bg.png')">
            <section class="text-gray-700 body-font relative">
              <div class="container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
                  <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
@@ -623,9 +625,9 @@
                          <!--==================
                           FOOTER/CONTACT SECTION
                          ==================-->
-                         <section class="panel">
+                         <section class=" ">
 
-                           <section class="bg-secondary panel">
+                           <section class="bg-secondary  ">
                               <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
                                 <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
                                 <div class="flex flex-col justify-center mt-24">
@@ -695,7 +697,7 @@
                               </footer>
                            </section>
                          </section>
-       </section> <!-- end of panel container -->
+       </section> <!-- end of   container -->
 
    <!-- ===============
        SCRIPTS
