--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -2,23 +2,23 @@ body{
 
 }
 
-#container {
+/* #container {
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
   left: 0;
   overflow: hidden;
-}
+} */
 
-.panel{
+/* .panel{
   border: 1px solid #191919;
   text-align: center;
   position: absolute;
   height: 100vh;
   width: 100%;
   will-change: transform;
-}
+} */
 
 
 /* Eventually give all the same class */
@@ -27,6 +27,9 @@ body{
   background: #191919;
 }
 
+.first{
+    background-color: #191919;
+}
 
 .second{
   border: 1px solid transparent;
