--- a/public/css/partners.css
+++ b/public/css/partners.css
@@ -7,6 +7,7 @@ body{
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  height: 100vh;
 }
 
 
@@ -31,7 +32,6 @@ body{
       background: linear-gradient(-110deg, #191919 60%, rgba(0, 0, 0, 0) 40%), url('https://images.unsplash.com/photo-1587168173357-99c7e95fb5cd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60');
     background-size: cover;
     background-position: 50% 20%;
-    text-align: right;
 }
 
 
