--- a/views/careers.hbs
+++ b/views/careers.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css link -->
     <link rel="stylesheet" href="../public/css/output-styles.css">
-    <link rel="stylesheet" href="../public/css/panels.css">
+    <!-- <link rel="stylesheet" href="../public/css/panels.css"> -->
     <link rel="stylesheet" href="../public/css/careers.css">
     <link rel="stylesheet" href="../public/css/mobile.css">
     <title>Vinci VR</title>
@@ -16,7 +16,7 @@
 
         <!--================== NAV SECTION ==================-->
 
-        <section class="panel hero-img text-2xl">
+        <section class="  hero-img text-2xl">
           <header class="text-gray-700 body-font ">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                 <a href="/" class="flex items-center mb-4 md:mb-0 xl:-mb-8">
@@ -48,16 +48,16 @@
               <h1 class="text-4xl uppercase text-center tracking-wider p-2 mt-48 font-sans font-semibold sm:text-4xl md:text-4xl xl:text-5xl xl:mt-72">Careers
               </h1>
               <hr class="coverHr w-1/4 center mx-auto">
-              <p class="tracking-widest text-center pt-1 font-serif xl:text-3xl">Join the VINCI team</p>
-               <p class="down-arrow sm:text-6xl my-32 text-center">⌄</p>
+              <p class="tracking-widest text-center pt-1 font-serif lg:text-3xl xl:text-3xl  ">Join the VINCI team</p>
+               <p class="down-arrow sm:text-3xl lg:text-3xl lg: my-32 text-center">⌄</p>
           </section>
         </section>
 
         <!--================== CAREERS INFO SECTION ==================-->
-        <section class="panel bg-secondary h-full">
-          <section class="bg-secondary text-2xl sm:p-12 overflow-auto infoBlock">
+        <section class="  bg-secondary h-full">
+          <section class="bg-secondary text-2xl sm:p-12 overflow-auto infoBlock lg:-mt-20">
               <h1 class="text-left text-3xl font-medium p-4 font-sans xl:text-4xl">Join Our Team
-                <hr class="mt-8 w-1/4 py-2 md:mb-20">
+                <hr class="mt-8 w-1/4 py-2 md:mb-20 lg:mb-10">
               </h1>
               <section class="bg-secondary my-auto p-4 grid grid-cols-3 border">
                 <h3 class="w-1/3 col-span-1">Position</h3>
@@ -105,9 +105,9 @@
         </section>
 
 
-        <section class="panel">
+        <section class=" ">
           <section class="bg-secondary">
-             <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
+             <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 lg:mt-10 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
                <h1 class ="text-primary text-center text-4xl font-sans xl:mt-12">Want to Learn More About VR Training?</h1>
                <div class="flex flex-col justify-center mt-32 xl:mt-40">
                   <a class="flex flex-col justify-center" href="/blogs">
@@ -146,32 +146,6 @@
                        </li>
                      </nav>
                    </div>
-                 </div>
-               </div>
-
-               <div class="tres-footer">
-                 <div class="container mx-auto py-8 px-5 flex flex-wrap flex-col sm:flex-row">
-                   <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
-                     <a href="http://www.tresstudios.dev/" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
-                   </p>
-                   <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-                     <a class="text-gray-500">
-                       <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                         <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-                       </svg>
-                     </a>
-                     <a class="ml-3 text-gray-500">
-                       <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                         <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
-                       </svg>
-                     </a>
-                     <a class="ml-3 text-gray-500">
-                       <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                         <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-                         <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-                       </svg>
-                     </a>
-                   </span>
                  </div>
                </div>
              </footer>
@@ -287,7 +261,7 @@
            </style>
        </section>
 
-       <section class="panel hero-img text-2xl">
+       <section class="  hero-img text-2xl">
 
          <hr class="-mt-4">
          <style media="screen">
@@ -309,7 +283,7 @@
        </section>
 
   <!--================== CAREERS INFO SECTION ==================-->
-       <section class="panel bg-secondary h-full">
+       <section class="  bg-secondary h-full">
          <section class="bg-secondary text-2xl sm:p-12 mx-4 overflow-x-auto">
              <h1 class="mt-12 text-4xl font-bold p-4 font-sans">Join Our Team
                <hr class="mt-6 w-1/4 py-2 mb-20">
@@ -360,7 +334,7 @@
        </section>
 
        <!-- - - - - - - - - Footer ---------------->
-       <section class="bg-secondary panel">
+       <section class="bg-secondary  ">
           <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
             <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
             <div class="flex flex-col justify-center mt-24">
@@ -432,7 +406,7 @@
 
      </section>   <!-- end of mobile container -->
 
-    </section> <!-- end of panel container -->
+    </section> <!-- end of   container -->
 
 <!-- ===============
     SCRIPTS
