--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -19,7 +19,7 @@
     </style>
     <section id = "container" class="background">
         <div class="main-wrapper">
-          <section id="cover" class="hero-section text-primary panel background cover overflow-hidden">
+          <section id="cover" class="hero-section text-primary background cover overflow-hidden">
             <header class="text-gray-700 body-font ">
                 <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                   <a href="/" class="flex items-center mb-4 md:mb-0 xl:-mb-8">
@@ -38,29 +38,29 @@
             <hr class="-mt-4">
 
 
-              <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl xl:text-5xl font-sans font-semibold xl:mt-72">PARTNERS</h1>
-              <div class="tracking-widest text-left xl:text-3xl p-4 ml-50 xl:mt-12">
+              <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl lg:text-4xl xl:text-4xl font-sans font-semibold lg:mt-48 xl:mt-72">PARTNERS</h1>
+              <div class="tracking-widest text-left xl:text-3xl p-4 ml-50 lg:-mt-2 xl:mt-12">
                 <p>See how VINCI is changing </p>
                 <p>training today.</p>
               </div>
            </section>
 
            <!-- - - - - - - - - Airforce ---------------->
-           <section class="mb-4 panel background first">
+           <section class="mb-4 background first">
               <section class="text-primary body-font">
-                <h1 class="text-primary text-center font-medium sm:text-4xl text-3xl lg:text-6xl xl:text-4xl mt-10 -mb-16 font-sans ">Air Craft Maintenance</h1>
+                <h1 class="text-primary text-center font-medium sm:text-4xl text-3xl lg:text-4xl lg:ml-64 xl:ml-40 xl:text-4xl mt-10 -mb-16 font-sans ">Air Craft Maintenance</h1>
                 <section class="text-gray-700 body-font">
                    <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
                         <!--EMPTY DIV FOR SPACE -->
                      </div>
                      <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
-                       <h2 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary">
+                       <h2 class="title-font sm:text-2xl text-3xl lg:ml-10 mb-4 font-medium text-primary">
                          <span>Client: <b>U.S. Airforce</b></span>
                          <span class="ml-48">Platform </span>
                        </h2>
 
-                       <p class="mb-8 leading-relaxed text-primary xl:text-2xl">Air Force Instructors struggle to ensure their airmen are prepared for the complexity of aircraft maintenance; units often don't have access to instructional aircraft or have limited time to utilize physical training simulators. Virtual Reality can address these shortages while ensuring airmen have an engaging learning resource to prepare for their mission.
+                       <p class="mb-8 leading-relaxed text-primary lg:text-xl xl:text-2xl">Air Force Instructors struggle to ensure their airmen are prepared for the complexity of aircraft maintenance; units often don't have access to instructional aircraft or have limited time to utilize physical training simulators. Virtual Reality can address these shortages while ensuring airmen have an engaging learning resource to prepare for their mission.
                          <br><br>
                         VINCI was awarded a contract by the Air Force to develop VR environments and modify CODEX for various USAF aircraft. </p>
                        <div class="flex justify-center">
@@ -74,7 +74,7 @@
            </section>
 
            <!-- - - - - - - - - WIND TURBINES ---------------->
-           <section class="mb-4 panel background second">
+           <section class="mb-4    background second">
               <section class="text-primary body-font">
                 <h1 class="text-primary text-center font-medium sm:text-4xl text-3xl mt-10 -mb-16 font-sans xl:text-4xl">Wind Turbines</h1>
                 <section class="text-gray-700 body-font">
@@ -98,7 +98,7 @@
            </section>
 
            <!-- - - - - - - - - Soldier Training ---------------->
-            <section class="mb-4 panel background third">
+            <section class="mb-4    background third">
               <section class="text-primary body-font">
                 <h1 class="text-primary text-center font-semibold sm:text-4xl text-3xl mt-10 -mb-16 font-sans xl:text-4xl">Soldier Training</h1>
                 <section class="text-gray-700 body-font">
@@ -124,7 +124,7 @@
 
 
           <!-- - - - - - - - - SafetyDNA VR ---------------->
-            <section class="mb-4 panel background fourth">
+            <section class="mb-4    background fourth">
               <section class="text-primary body-font">
                 <h1 class="text-primary font-semibold text-center sm:text-4xl text-3xl mt-10 -mb-16 font-sans xl:text-4xl">SafetyDNA VR</h1>
                 <section class="text-gray-700 body-font">
@@ -151,8 +151,8 @@
            </section>
 
 
-           <section class="panel">
-             <section class="bg-secondary panel">
+           <section class="  ">
+             <section class="bg-secondary   ">
                 <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
                   <h1 class ="text-primary text-center text-4xl font-sans xl:mt-12">Want to Learn More About VR Training?</h1>
                   <div class="flex flex-col justify-center mt-32 xl:mt-40">
@@ -334,7 +334,7 @@
              </style>
          </section>
 
-         <section id="cover" class="hero-section text-primary panel background cover overflow-hidden">
+         <section id="cover" class="hero-section text-primary    background cover overflow-hidden">
            <header class="text-gray-700 body-font ">
 
            </header>
@@ -347,7 +347,7 @@
           </section>
 
           <!-- - - - - - - - - Airforce ---------------->
-          <section class="mb-4 panel background first">
+          <section class="mb-4    background first">
              <section class="text-primary body-font">
                <h1 class="text-primary text-center font-semibold sm:text-4xl text-3xl mt-16 -mb-16 font-sans">Air Craft Maintenance</h1>
                <section class="text-gray-700 body-font">
@@ -378,7 +378,7 @@
           </section>
 
           <!-- - - - - - - - - WIND TURBINES ---------------->
-          <section class="mb-4 panel background second">
+          <section class="mb-4    background second">
              <section class="text-primary body-font">
                <h1 class="text-primary text-center mx-auto font-semibold sm:text-4xl text-3xl mt-16 -mb-16 font-sans">Wind Turbines</h1>
                <section class="text-gray-700 body-font">
@@ -406,7 +406,7 @@
           </section>
 
           <!-- - - - - - - - - Soldier Training ---------------->
-           <section class="mb-4 panel background third">
+           <section class="mb-4    background third">
              <section class="text-primary body-font">
                <h1 class="text-primary text-center mx-auto font-semibold sm:text-4xl text-3xl mt-16 -mb-16 font-sans">Soldier Training</h1>
                <section class="text-gray-700 body-font">
@@ -436,7 +436,7 @@
           </section>
 
           <!-- - - - - - - - - SafetyDNA VR ---------------->
-            <section class="mb-4 panel background fourth">
+            <section class="mb-4    background fourth">
               <section class="text-primary body-font">
                 <h1 class="text-primary font-semibold text-center mx-auto sm:text-4xl text-3xl mt-16 -mb-16 font-sans">SafetyDNA VR</h1>
                 <section class="text-gray-700 body-font">
@@ -468,7 +468,7 @@
            </section>
 
            <!-- - - - - - - - - Footer ---------------->
-           <section class="bg-secondary panel">
+           <section class="bg-secondary   ">
               <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
                 <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
                 <div class="flex flex-col justify-center mt-24">
@@ -539,7 +539,7 @@
            </section>
        </section>   <!-- end of mobile container -->
 
-      </section> <!-- end of panel container -->
+      </section> <!-- end of    container -->
 
   <!-- ===============
       SCRIPTS
