--- a/views/about.hbs
+++ b/views/about.hbs
@@ -21,11 +21,11 @@
 
     <section id = "container" class="overflow-x-hidden">
       <div class="main-wrapper">
-        <section id="cover" class="bg-no-repeat bg-center bg-cover text-primary    background cover overflow-hidden w-full h-screen hero-section" style="background-image: url('../public/img/about-cover.png')">
+        <section id="cover" class="bg-no-repeat bg-center bg-cover text-primary background cover overflow-hidden w-full h-screen hero-section" style="background-image: url('../public/img/about-cover.png')">
              <header class="text-gray-700 body-font ">
                  <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-                   <a href="/" class="flex items-center mb-4 md:mb-0  xl:-mb-8">
-                     <img class="w-1/6 -mt-2 xl:w-1/4 xl:mt-2" src="../public/img/vinci-logo.png" alt="">
+                   <a href="/" class="flex items-center mb-4 md:mb-0 lg:-mb-6 xl:-mb-8">
+                     <img class="w-1/6 -mt-2 xl:w-1/4 lg:mt-2 xl:mt-2" src="../public/img/vinci-logo.png" alt="">
                    </a>
                    <nav class="md:ml-auto lg:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg xl:text-3xl font-semibold">
                      <a href="/about" class="mr-5 hover:text-gray-900">About</a>
