--- a/views/services.hbs
+++ b/views/services.hbs
@@ -31,8 +31,8 @@
 
             <header class="text-gray-700 body-font ">
                 <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-                  <a href="/" class="flex items-center mb-4 md:mb-0 xl:-mb-8">
-                    <img class="w-1/6 xl:w-1/4 xl:mt-2 -mt-2" src="../public/img/vinci-logo.png" alt="">
+                  <a href="/" class="flex items-center mb-4 md:mb-0 lg:-mb-6 xl:-mb-8">
+                    <img class="w-1/6 xl:w-1/4 lg:mt-2 xl:mt-2 -mt-2" src="../public/img/vinci-logo.png" alt="">
                   </a>
                   <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg xl:text-3xl font-semibold">
                     <a href="/about" class="mr-5 hover:text-gray-900">About</a>
@@ -81,7 +81,7 @@
           <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
             <section class="-ml-2 w-2/3">
               <h2 class="text-3xl font-medium uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Codex Authoring</h2>
-              <hr class="xl:w-3/4">
+              <hr class="-ml-2 w-2/3">
               <h4 class="text-xl xl:text-3xl font-medium my-4">Fully Customize Your Simulations</h4>
               <ul class="text-md xl:text-2xl">
                 <li class="tracking-wider leading-loose">
