--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -577,10 +577,10 @@
 
 <!--=========== WHY VINCI ===================== -->
          <section class="  border-b border-gray-300 border-opacity-25">
-           <section class="partnersBlock h-screen w-full mb-64">
+           <section class="partnersBlock h-screen w-full mb-78">
              <section class="text-gray-700 body-font">
                <div class="container px-5 mt-16 mx-auto">
-                 <div class="text-center mb-20">
+                 <div class="text-center mb-10">
                    <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 mb-4 text-primary">Why VINCI?</h1>
                    <div class="flex mt-6 justify-center">
                      <div class="w-16 h-1 rounded-full bg-indigo-500 inline-flex"></div>
@@ -588,7 +588,7 @@
                  </div>
                  <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
 
-                   <div class="p-4 md:w-1/3 md:mb-0 mb-6 flex flex-col text-center items-center">
+                   <div class="p-4 md:w-1/3 md:mb-0 mb-2 flex flex-col text-center items-center">
                      <div class="w-20 h-20 inline-flex items-center justify-center mb-5 flex-shrink-0">
                        <img src="../public/img/lightning.png" alt="">
                      </div>
@@ -604,7 +604,7 @@
                      </div>
                    </div>
 
-                   <div class="p-4 md:w-1/3 md:mb-0 mb-6 flex flex-col text-center items-center">
+                   <div class="p-4 md:w-1/3 md:mb-0 mb-2 flex flex-col text-center items-center">
                      <div class="w-20 h-20 inline-flex items-center justify-center  mb-5 flex-shrink-0">
                         <img class="object-fill" src="../public/img/affordable.png" alt="">
                      </div>
@@ -619,7 +619,7 @@
                      </div>
                    </div>
 
-                   <div class="p-4 md:w-1/3 md:mb-0 mb-6 flex flex-col text-center items-center">
+                   <div class="p-4 md:w-1/3 md:mb-0 mb-2 flex flex-col text-center items-center">
                      <div class="w-20 h-20 inline-flex items-center justify-center mb-5 flex-shrink-0 back" >
                         <img class="cover" src="../public/img/group.png" alt="">
                      </div>
@@ -784,9 +784,9 @@
 
       <!--================== SPOTLIGHT SECTION  ==================-->
       <section class="border-b border-gray-300 border-opacity-25  ">
-        <section class="   spotlight h-screen w-full">
+        <section class=" mb-16 spotlight h-screen w-full">
 
-          <h1 class="text-center text-3xl mt-12 uppercase font-sans font-medium">Spotlight</h1>
+          <h1 class="text-center text-3xl mt-12 uppercase font-sans font-medium -mb-10">Spotlight</h1>
 
           <section class="spot-container flex justify-center p-12">
             <!-- <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FSheppardAirForceBase%2Fvideos%2F558267695076414%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe> -->
