--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -26,12 +26,14 @@
                   <img class="w-1/6 -mt-2 xl:w-1/4 lg:mt-2 xl:mt-2" src="../public/img/vinci-logo.png" alt="">
                 </a>
                 <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg xl:text-3xl font-semibold">
-                  <a href="/about" class="mr-5 hover:text-gray-900">About</a>
-                  <a href="/services" class="mr-5 hover:text-gray-900">Solutions</a>
-                  <a href="/partners" class="mr-5 hover:text-gray-900">Partners</a>
-                  <a href="/careers" class="mr-5 hover:text-gray-900">Careers</a>
-                  <a href="/blogs" class="mr-5 hover:text-gray-900">Blogs</a>
-                  <a href="/contact" class="mr-5 hover:text-gray-900">Contact</a>
+                  <h5>
+                    <a href="/about" class="mr-4 hover:text-gray-900">About</a>
+                    <a href="/services" class="mr-4 hover:text-gray-900">Solutions</a>
+                    <a href="/partners" class="mr-4 hover:text-gray-900">Partners</a>
+                    <a href="/careers" class="mr-4 hover:text-gray-900">Careers</a>
+                    <a href="/blogs" class="mr-4 hover:text-gray-900">Blogs</a>
+                    <a href="/contact" class="mr-4 hover:text-gray-900">Contact</a>
+                  </h5>
                 </nav>
               </div>
           </header>
@@ -57,21 +59,20 @@
               <source src="../public/video/background2.mp4" type="video/mp4">
 
           </video>
-          <section class="font-sans hero-text w-full p-4 absolute z-1 sm:mt-32 md:mt-40 lg: xl:mt-64 ">
-            <h3 class="font-sans sm:text-xl md:text-xl xl:text-3xl"> PREPARE FOR THE REAL WORLD
+          <section class="font-sans hero-text w-full p-4 absolute z-1 sm:mt-32 md:mt-40 lg: xl:mt-48">
+            <h3 class="font-sans sm:text-xl md:text-xl xl:text-2xl"> PREPARE FOR THE REAL WORLD
               <hr class="mt-4 w-1/3 mx-auto">
             </h3>
             <br>
-             <h1 class="font-sans font-bold -mb-20 -mt-6 text-2xl md:text-2xl lg:text-3xl xl:text-5xl "> WITH A WORLD OF YOUR OWN
+             <h1 class="font-sans font-bold -mb-20 -mt-6 text-2xl md:text-2xl lg:text-3xl xl:text-4xl "> WITH A WORLD OF YOUR OWN
               <hr class=" w-1/3 mx-auto mb-10">
             </h1>
-           <h3 class="font-sans pt-12 sm:my-8 sm:text-xl md:text-xl xl:text-3xl xl:mb-10">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
+           <h3 class="font-sans pt-12 sm:my-8 sm:text-xl md:text-xl xl:text-2xl xl:mb-10">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
     ​
-           <a id="learnMoreIntro" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-sm md:text-sm lg:text-base xl:text-xl" href="/services">Learn about our services</a>
+           <a id="learnMoreIntro" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-sm md:text-sm lg:text-base xl:text-lg" href="/services">Learn about our services</a>
     ​
-    ​       <p class="down-arrow text-3xl xl:text-5xl sm:my-12 md:my-32">⌄</p>
+    ​       <p class="down-arrow text-3xl xl:text-4xl sm:my-12 md:my-32">⌄</p>
           </section>
-
         </section>
 
 
@@ -83,7 +84,7 @@
                      Codex: A New Way to Train in VR
                  </h2>
                  <hr class="mt-4">
-                 <p class="text-primary text-left mt-6 tracking-widest leading-8  xl:text-2xl">
+                 <p class="text-primary text-left mt-6 tracking-widest leading-8  xl:text-xl">
                  Effective training requires expensive equipment, generates potential safety hazards, and elongates training time.
                   With Codex, teams can now improve their training by creating, training in and analyzing immersive VR simulations.
                   </p>
@@ -102,11 +103,11 @@
 
   <!--==================  Why Vinci ==================-->
      <section class="border-b border-gray-300 border-opacity-25">
-       <section class="partnersBlock h-screen w-full lg:mb-10 mb-32">
+       <section class="partnersBlock h-screen w-full lg:mb-10 mb-32 xl:mb-0">
          <section class="text-gray-700 body-font">
-           <div class="container px-5 mt-20 xl:mt-32">
+           <div class="container px-5 mt-20 mx-auto xl:mt-32">
              <div class="text-center mb-20">
-               <h1 class=" text-3xl xl:text-4xl font-medium title-font text-gray-900 mb-4 text-primary">Why VINCI?</h1>
+               <h1 class=" text-3xl xl:text-3xl font-medium title-font text-gray-900 mb-4 text-primary">Why VINCI?</h1>
                <div class="flex mt-6 justify-center">
                  <div class="w-16 h-1 rounded-full bg-indigo-500 inline-flex"></div>
                </div>
@@ -119,9 +120,9 @@
                  </div>
                  <div class="flex-grow text-primary">
                    <h2 class="text-gray-900 text-lg xl:text-3xl title-font font-medium mb-3 uppercase text-primary">Codex </h2>
-                   <p class="leading-relaxed text-base xl:text-2xl">
+                   <p class="leading-relaxed text-base xl:text-xl">
                      VINCI's flagship software, CODEX, enables instructors to rapidly create and edit their own training simulations.</p>
-                   <a href = "" class="mt-3 text-primary inline-flex items-center xl:text-2xl">Learn More
+                   <a href = "" class="mt-3 text-primary inline-flex items-center xl:text-xl">Learn More
                      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                        <path d="M5 12h14M12 5l7 7-7 7"></path>
                      </svg>
@@ -150,8 +151,8 @@
                  </div>
                  <div class="flex-grow text-primary">
                    <h2 class="text-gray-900 text-lg xl:text-3xl title-font font-medium mb-3 text-primary">Client Centric</h2>
-                   <p class="leading-relaxed text-base xl:text-2xl">VINCI’s partners take the front seat; by working closely with your workforce, we can build the best simulations.</p>
-                   <a href = "" class="mt-3 text-primary inline-flex items-center xl:text-2xl">Learn More
+                   <p class="leading-relaxed text-base xl:text-xl">VINCI’s partners take the front seat; by working closely with your workforce, we can build the best simulations.</p>
+                   <a href = "" class="mt-3 text-primary inline-flex items-center xl:text-xl">Learn More
                      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                        <path d="M5 12h14M12 5l7 7-7 7"></path>
                      </svg>
@@ -319,7 +320,7 @@
 
       <!--==================  SPOTLIGHT SECTION ==================-->
       <section class="border-b border-gray-300 border-opacity-25  ">
-        <section class="   spotlight h-screen w-full">
+        <section class="spotlight h-screen w-full lg:mb-32">
           <h1 class="text-center text-4xl mt-16 mb uppercase font-sans font-medium z-30 relative">Spotlight</h1>
           <section class="spot-container flex justify-center p-4">
 
@@ -340,15 +341,15 @@
              <h1 class ="text-primary text-center text-4xl font-sans xl:mt-12">Want to Learn More About VR Training?</h1>
              <div class="flex flex-col justify-center mt-32 xl:mt-40">
                 <a class="flex flex-col justify-center" href="/blogs">
-                  <button class="w-1/4 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg xl:text-3xl">Check Out Our Blogs</button>
+                  <button class="w-1/4 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg xl:text-2xl">Check Out Our Blogs</button>
                 </a>
-                <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
+                <p class="mx-auto text-Center text-2xl xl:text-3xl text-primary text-semibold">-or-</p>
                 <a class="flex flex-col justify-center" href="/contact">
-                <button class=" w-1/4 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg xl:text-3xl">Reach Out To Us</button>
+                <button class=" w-1/4 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg xl:text-2xl">Reach Out To Us</button>
                 </a>
              </div>
              <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
-               <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
+               <div class="w-64 xl:w-56 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
                  <img class="-mt-2 xl:mt-20" src="../public/img/vinci-logo.png" alt="">
                </div>
                <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
@@ -576,7 +577,7 @@
          </section>
 
 <!--=========== WHY VINCI ===================== -->
-         <section class="  border-b border-gray-300 border-opacity-25">
+         <section class="border-b border-gray-300 border-opacity-25">
            <section class="partnersBlock h-screen w-full mb-78">
              <section class="text-gray-700 body-font">
                <div class="container px-5 mt-16 mx-auto">
