Fix panel issue on blogs page

--- a/views/blogs.hbs
+++ b/views/blogs.hbs
@@ -3,9 +3,7 @@
 	<head>
 		<link rel="stylesheet" href="../public/css/output-styles.css">
 		<link rel="stylesheet" href="../public/css/blogs.css">
-		<link rel="stylesheet" href="../public/css/panels.css">
 		<link rel="stylesheet" href="../public/css/mobile.css">
-	  <!-- <script src="/js/download.js"></script> -->
 		<meta charset="utf-8">
 		<title>VINCI VR</title>
 	</head>
@@ -13,7 +11,7 @@
 	<body class="bg-secondary color-primary">
 		<section id="container">
 			<div class="main-wrapper">
-				<section class="panel">
+				<section class=" ">
 					<!--==================
 					 NAV SECTION
 					==================-->
@@ -141,8 +139,8 @@
 				 FOOTER SECTION
 				==================-->
 
-				<section class="panel">
-          <section class="bg-secondary panel">
+				<section class=" ">
+          <section class="bg-secondary  ">
              <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
                <h1 class ="text-primary text-center text-4xl font-sans xl:mt-12">Want to Learn More About VR Training?</h1>
                <div class="flex flex-col justify-center mt-32 xl:mt-40">
@@ -335,7 +333,7 @@ MOBILE VIEW ====================================================================
 					 }
 					 </style>
 			 </section>
- 				<section class="panel">
+ 				<section class=" ">
 
 
 
@@ -398,7 +396,7 @@ MOBILE VIEW ====================================================================
 							</section>
 						</section>
  							<!-- blog2 -->
- 							<div class="panel">
+ 							<div class=" ">
 								<div class="h-full p-4 md:w-1/3 text-primary">
 	 				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
 	 				          <img class="lg:h-48 md:h-36 w-full object-cover object-top" src="https://images.unsplash.com/flagged/photo-1556470234-36a5389f905a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="blog">
@@ -420,7 +418,7 @@ MOBILE VIEW ====================================================================
 	 				      </div>
  							</div>
  							<!-- blog3 -->
- 							<div class="panel">
+ 							<div class=" ">
 								<div class="h-full p-4 md:w-1/3 text-primary">
 	 				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
 	 				          <img class="lg:h-48 md:h-36 w-full object-cover object-top" src="https://images.unsplash.com/photo-1459550146610-232100af5511?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1094&q=80" alt="blog">
@@ -442,7 +440,7 @@ MOBILE VIEW ====================================================================
 	 				      </div>
  							</div>
  							<!-- blog4 -->
- 							<div class="panel">
+ 							<div class=" ">
 								<div class="h-full p-4 md:w-1/3 mb-32 text-primary">
 	 				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-display">
 	 				          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="../public/img/af-training.png" alt="blog">
@@ -469,13 +467,13 @@ MOBILE VIEW ====================================================================
 
 
 
-			<section class="panel">
+			<section class=" ">
 				<!--==================
 				 FOOTER/CONTACT SECTION
 				==================-->
-				<section class="panel">
+				<section class=" ">
 
-					<section class="bg-secondary panel">
+					<section class="bg-secondary  ">
 						 <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
 							 <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
 							 <div class="flex flex-col justify-center mt-24">
@@ -550,7 +548,7 @@ MOBILE VIEW ====================================================================
 
 		 </section>   <!-- end of mobile container -->
 
-    </section> <!-- end of panel container -->
+    </section> <!-- end of   container -->
 
 <!-- ===============
     SCRIPTS
@@ -558,6 +556,6 @@ MOBILE VIEW ====================================================================
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
-		<script src ="../public/js/blogs.js"></script>
+		<!-- <script src ="../public/js/blogs.js"></script> -->
 	</body>
 </html>
