--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -546,6 +546,6 @@
   =================== -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
-    <script src ="../public/js/partners.js"></script>r
+    <!-- <script src ="../public/js/partners.js"></script>r -->
   </body>
 </html>
