--- a/views/about.hbs
+++ b/views/about.hbs
@@ -615,7 +615,7 @@
             </style>
         </section>
 
-        <section id="cover" class="bg-no-repeat bg-center bg-cover text-primary    background cover overflow-hidden w-full h-screen hero-section" style="background-image: url('../public/img/about-cover.png')">
+        <section id="cover" class="bg-no-repeat bg-center bg-cover text-primary  background cover overflow-hidden w-full h-screen hero-section" style="background-image: url('../public/img/about-cover.png')">
              <header class="text-gray-700 body-font ">
 
              </header>
@@ -673,7 +673,7 @@
            </div>
          </section>
 
-         <section class="lg:mb-4 text-primary    bg-secondary">
+         <section class="lg:mb-4 text-primary mx-auto bg-secondary">
            <section class="text-gray-700 body-font">
                  <div class="container py-20 mx-auto">
                    <div class="lg:flex lg:flex-col sm:block text-center w-full mb-20  pr-8 pl-4 ">
@@ -683,7 +683,7 @@
                    </div>
                    <div class="lg:flex lg:flex-wrap sm:block -m-2">
 
-                     <section id="test" class="w-full p-4">
+                     <section id="test" class="w-full p-2">
                        <!-- Here is your access point for your user, a preview of the images you wish to display.
                            You use the onclick="" event handler to execute the methods you will define in the
                            JavaScript near the bottom -->
@@ -1076,31 +1076,6 @@
                                 </li>
                               </nav>
                             </div>
-                          </div>
-                        </div>
-                        <div class="bg-gray-200">
-                          <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-                            <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
-                              <a href="" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
-                            </p>
-                            <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-                              <a class="text-gray-500">
-                                <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                                  <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-                                </svg>
-                              </a>
-                              <a class="ml-3 text-gray-500">
-                                <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                                  <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
-                                </svg>
-                              </a>
-                              <a class="ml-3 text-gray-500">
-                                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                                  <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-                                  <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-                                </svg>
-                              </a>
-                            </span>
                           </div>
                         </div>
                       </footer>
