--- a/views/blogs.hbs
+++ b/views/blogs.hbs
@@ -184,32 +184,6 @@
                    </div>
                  </div>
                </div>
-
-               <div class="tres-footer">
-                 <div class="container mx-auto py-8 px-5 flex flex-wrap flex-col sm:flex-row">
-                   <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
-                     <a href="http://www.tresstudios.dev/" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
-                   </p>
-                   <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-                     <a class="text-gray-500">
-                       <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                         <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-                       </svg>
-                     </a>
-                     <a class="ml-3 text-gray-500">
-                       <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                         <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
-                       </svg>
-                     </a>
-                     <a class="ml-3 text-gray-500">
-                       <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                         <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-                         <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-                       </svg>
-                     </a>
-                   </span>
-                 </div>
-               </div>
              </footer>
           </section>
         </section>
@@ -517,31 +491,6 @@ MOBILE VIEW ====================================================================
 									 </div>
 								 </div>
 							 </div>
-							 <div class="bg-gray-200">
-								 <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-									 <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
-										 <a href="" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
-									 </p>
-									 <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-										 <a class="text-gray-500">
-											 <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-												 <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-											 </svg>
-										 </a>
-										 <a class="ml-3 text-gray-500">
-											 <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-												 <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
-											 </svg>
-										 </a>
-										 <a class="ml-3 text-gray-500">
-											 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-												 <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-												 <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-											 </svg>
-										 </a>
-									 </span>
-								 </div>
-							 </div>
 						 </footer>
 					</section>
 				</section>
@@ -558,6 +507,5 @@ MOBILE VIEW ====================================================================
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
-		<!-- <script src ="../public/js/blogs.js"></script> -->
-	</body>
+s	</body>
 </html>
