--- a/views/careers.hbs
+++ b/views/careers.hbs
@@ -22,7 +22,7 @@
                 <a href="/" class="flex items-center mb-4 md:mb-0 lg:-mb-6 xl:-mb-8">
                   <img class="w-1/6 -mt-2 xl:w-1/4 lg:mt-2 xl:mt-2" src="../public/img/vinci-logo.png" alt="">
                 </a>
-                <nav class="md:ml-auto lg:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg xl:text-3xl font-semibold">
+                <nav class="md:ml-auto lg:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg xl:text-xl font-semibold">
                   <h5>
                     <a href="/about" class="mr-4 hover:text-gray-900">About</a>
                     <a href="/services" class="mr-4 hover:text-gray-900">Solutions</a>
