--- a/views/services.hbs
+++ b/views/services.hbs
@@ -34,7 +34,7 @@
                   <a href="/" class="flex items-center mb-4 md:mb-0 lg:-mb-6 xl:-mb-8">
                     <img class="w-1/6 xl:w-1/4 lg:mt-2 xl:mt-2 -mt-2" src="../public/img/vinci-logo.png" alt="">
                   </a>
-                  <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg xl:text-3xl font-semibold">
+                  <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg xl:text-xl font-semibold">
                     <h5>
                       <a href="/about" class="mr-4 hover:text-gray-900">About</a>
                       <a href="/services" class="mr-4 hover:text-gray-900">Solutions</a>
@@ -556,12 +556,13 @@
           <section class="  bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="mx-auto w-2/3 ">
-                <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Leverage low-cost VR</h1>
+                <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Personalized and Relevant Content
+</h1>
                 <hr>
                 <h4 class="text-xl font-medium my-4"></h4>
                 <ul>
                     <li class="tracking-wider leading-loose">
-                        Utilize smart insights from codex analytics to tailor training content to individual students.
+                        Utilize smart insights from codex analytics to tailor training content to individual students 
                     </li>
                     <li class="tracking-wider leading-loose">
                         Keep simulations relevant with field conditions quickly with codex authoring.
